--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -78,10 +78,12 @@
     </div><!-- /.container-fluid -->
 </nav>
 <div class="col-md-6 col-md-offset-5" style="padding-top: 10%">
-<button class="btn btn-primary"> ADD A CHOCOLATE</button>
+    <a href="{% url 'add_choclate' %}">
+        <button class="btn btn-primary"> ADD A CHOCOLATE</button>
+    </a>
 </div>
 
-    <div class="col-md-6"></div>
+<div class="col-md-6"></div>
 </div>
 </body>
 </html>
