--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -58,7 +58,9 @@
                             <li>
                                 <div class="btn-group">
                                     <a class="btn-new btn-nav btn-white" data-toggle="dropdown"><i class="fa fa-user fa-fw"></i>
+                            <li><a href="{% url 'logout' %}">EditProfile</a></li>
                             <li><a href="{% url 'logout' %}">logout</a></li>
+
                             {% if request.user.user_first_name %}
                                 {{ request.user.user_first_name }}
                             {% elif request.user.username %}
@@ -78,38 +80,38 @@
     </div><!-- /.container-fluid -->
 </nav>
 <div class="col-md-8 col-md-offset-2 well">
-   <table class="table table-hover table-bordered table-responsive">
-    <thead>
-    <tr>
-        <th>
-            Name
-        </th>
-        <th>
-            Description
-        </th>
-        <th>
-            Manufacturer
-        </th>
-        <th>
-            Price
-        </th>
-           <th>
-            More
-        </th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for item in object_list %}
+    <table class="table table-hover table-bordered table-responsive">
+        <thead>
         <tr>
-            <td> {{ item.name }} </td>
-            <td> {{ item.description }}</td>
-            <td> {{ item.manufacturer }}</td>
-            <td> {{ item.price }}</td>
-            <td> <a href="{% url 'chocolate_info' item.id %}">Info</a> </td>
+            <th>
+                Name
+            </th>
+            <th>
+                Description
+            </th>
+            <th>
+                Manufacturer
+            </th>
+            <th>
+                Price
+            </th>
+            <th>
+                More
+            </th>
         </tr>
-    {% endfor %}
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+        {% for item in object_list %}
+            <tr>
+                <td> {{ item.name }} </td>
+                <td> {{ item.description }}</td>
+                <td> {{ item.manufacturer }}</td>
+                <td> {{ item.price }}</td>
+                <td> <a href="{% url 'chocolate_info' item.id %}">Info</a> </td>
+            </tr>
+        {% endfor %}
+        </tbody>
+    </table>
 </div>
 
 <div class="col-md-6 col-md-offset-5" style="padding-top: 10%">
