--- a/registration/templates/index.html
+++ b/registration/templates/index.html
@@ -58,7 +58,7 @@
                             <li>
                                 <div class="btn-group">
                                     <a class="btn-new btn-nav btn-white" data-toggle="dropdown"><i class="fa fa-user fa-fw"></i>
-                            <li><a href="{% url 'logout' %}">EditProfile</a></li>
+                            <li><a href="{% url 'user_profile_update' %}">EditProfile</a></li>
                             <li><a href="{% url 'logout' %}">logout</a></li>
 
                             {% if request.user.user_first_name %}
